[package]
name = "lido_cosmos_hub"
version = "1.0.0"
authors = ["Andrew Zavgorodny <andrei.z@p2p.org>","Mike Mozhaev <misha.m@p2p.org>","Sergey Golyshkin <sergey.g@p2p.org>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]
library = []

[dependencies]
cw20 = "0.13.1"
cw20-base = { version = "0.13.1", features = ["library"] }
cosmwasm-std = { version = "1.0.0-beta7", features = ["staking", "stargate"] }
cosmwasm-storage = { version = "1.0.0-beta7", features = ["iterator"] }
cw-storage-plus = { version = "0.13.1", features = ["iterator"]}
schemars = "0.8.0"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
lido_cosmos_rewards_dispatcher = {path = "../lido_cosmos_rewards_dispatcher", features = ["library"] }
basset = { path = "../../packages/basset", default-features = false, version = "0.1.0"}
signed_integer = { path = "../../packages/signed_integers", default-features = false, version = "0.1.0"}
lido_cosmos_validators_registry = {path = "../lido_cosmos_validators_registry", features = ["library"]}
cosmwasm-bignumber = "2.2.0"
protobuf = { version = "2", features = ["with-bytes"] }
sha2 = "*"

[dev-dependencies]
cosmwasm-vm = { version = "1.0.0-beta7", default-features = false, features = ["iterator"] }
cosmwasm-schema = { version = "1.0.0-beta7", default-features = false  }
cosmwasm-crypto = { version = "1.0.0-beta7" }
bech32 = "0.8.1"